--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "owl.carousel": "^2.3.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "simple-react-lightbox": "^3.6.9-0",
     "wowjs": "^1.1.3"
   },
   "scripts": {
