--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "3d-react-carousal": "^5.0.0",
     "google-maps-react": "^2.0.2",
     "html-react-parser": "^0.10.1",
     "owl.carousel": "^2.3.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-id-swiper": "^4.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
@@ -18,6 +20,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "simple-react-lightbox": "^3.6.9-0",
+    "swiper": "^9.2.4",
     "wowjs": "^1.1.3"
   },
   "scripts": {
