--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "owl.carousel": "^2.3.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^4.8.0",
     "react-id-swiper": "^4.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-slick": "^0.28.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "simple-react-lightbox": "^3.6.9-0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^9.2.4",
     "wowjs": "^1.1.3"
   },
