--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "3d-react-carousal": "^5.0.0",
     "google-maps-react": "^2.0.2",
     "html-react-parser": "^0.10.1",
+    "install": "^0.13.0",
+    "jquery": "^3.6.4",
+    "npm": "^9.6.5",
     "owl.carousel": "^2.3.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -17,7 +20,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-slick": "^0.28.0",
+    "react-slick": "^0.28.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
