--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "3d-react-carousal": "^5.0.0",
+    "axios": "^1.4.0",
     "google-maps-react": "^2.0.2",
     "html-react-parser": "^0.10.1",
     "install": "^0.13.0",
