--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "npm": "^9.6.5",
     "owl.carousel": "^2.3.4",
     "react": "^16.12.0",
+    "react-calendly": "^4.1.1",
     "react-dom": "^16.12.0",
     "react-icons": "^4.8.0",
     "react-id-swiper": "^4.0.0",
