--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-slick": "^0.28.1",
+    "react-sticky-box": "^2.0.4",
     "react-tabs": "^6.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
