--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^7.2.1",
     "3d-react-carousal": "^5.0.0",
     "axios": "^1.4.0",
+    "formik": "^2.2.9",
     "google-maps-react": "^2.0.2",
     "html-react-parser": "^0.10.1",
     "install": "^0.13.0",
@@ -40,7 +41,8 @@
     "simple-react-lightbox": "^3.6.9-0",
     "slick-carousel": "^1.8.1",
     "swiper": "^9.2.4",
-    "wowjs": "^1.1.3"
+    "wowjs": "^1.1.3",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "build": "react-scripts  --openssl-legacy-provider build ",
