--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.12.0",
     "react-icons": "^4.8.0",
     "react-id-swiper": "^4.0.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.1.2",
