--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.12.0",
     "react-icons": "^4.8.0",
     "react-id-swiper": "^4.0.0",
+    "react-multi-carousel": "^2.8.3",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
@@ -46,8 +47,8 @@
     "yup": "^1.1.1"
   },
   "scripts": {
-    "build": "react-scripts  --openssl-legacy-provider build ",
-    "start": "react-scripts  --openssl-legacy-provider start ",
+    "build": "react-scripts  build ",
+    "start": "react-scripts  start ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
