--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "yup": "^1.1.1"
   },
   "scripts": {
-    "build": "react-scripts  build ",
-    "start": "react-scripts  start ",
+    "build": "react-scripts  --openssl-legacy-provider build ",
+    "start": "react-scripts  --openssl-legacy-provider start ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
