--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^16.12.0",
     "react-calendly": "^4.1.1",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-id-swiper": "^4.0.0",
     "react-multi-carousel": "^2.8.3",
