--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "quarter",
+  "name": "totallyhomez",
+  "homepage": "https://totallyhomez.nxgtech.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
