--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "totallyhomez",
-  "homepage": "https://totallyhomez.nxgtech.io",
+  "name": "quarter",
+
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,10 +20,11 @@
     "formik": "^2.2.9",
     "google-maps-react": "^2.0.6",
     "html-react-parser": "^0.10.1",
+    "i": "^0.3.7",
     "install": "^0.13.0",
     "jquery": "^3.7.0",
     "loglevel": "^1.8.1",
-    "npm": "^9.6.5",
+    "npm": "^9.6.7",
     "owl.carousel": "^2.3.4",
     "react": "^16.12.0",
     "react-calendly": "^4.1.1",
@@ -31,7 +32,9 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-id-swiper": "^4.0.0",
+    "react-js-pagination": "^3.0.3",
     "react-multi-carousel": "^2.8.3",
+    "react-paginate": "^8.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
