--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "yup": "^1.1.1"
   },
   "scripts": {
-    "build": "react-scripts  --openssl-legacy-provider build ",
-    "start": "react-scripts  --openssl-legacy-provider start ",
+    "build": "react-scripts   build ",
+    "start": "react-scripts   start ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
