--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-multi-carousel": "^2.8.3",
     "react-paginate": "^8.2.0",
     "react-phone-input-2": "^2.15.1",
+    "react-popup-alert": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.1.2",
