--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^7.2.1",
     "3d-react-carousal": "^5.0.0",
     "axios": "^1.4.0",
+    "csrf": "^3.1.0",
     "formik": "^2.2.9",
     "google-maps-react": "^2.0.6",
     "html-react-parser": "^0.10.1",
