--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "owl.carousel": "^2.3.4",
     "pure-react-carousel": "^1.30.1",
     "react": "^16.12.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.7.4",
     "react-calendly": "^4.1.1",
     "react-dom": "^16.12.0",
